# agent-benchmark

./: .editorconfig  .gitignore  BENCHMARK_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  FIXES.md  HERMES_BENCHMARK.md  LICENSE  README.md  REPO_SETUP_SUMMARY.md  SECURITY.md  config.yaml  generate_hermes_tasks.py  pyproject.toml  quick_test.py  run_hermes_benchmark.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new_task.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: benchmark-tool-plan.md
src/code_benchmark/: __init__.py  api_client.py  cli.py  config.py  reporter.py  reviewer.py  runner.py  scorer.py  task_loader.py
tasks/: index.yaml
tasks/algorithms/: binary-search.yaml  dijkstra.yaml  lru-cache.yaml  merge-sort.yaml
tasks/data-structures/: hash-map.yaml  priority-queue.yaml
tasks/debugging/: memory-leak.yaml  null-pointer.yaml  off-by-one.yaml  race-condition.yaml
tasks/hermes/: index.yaml
tasks/hermes/code-review/: review-best-practices.yaml  review-complexity.yaml  review-docs.yaml  review-find-bugs.yaml  review-improvements.yaml  review-performance.yaml  review-security.yaml  review-style.yaml  review-tests.yaml  review-types.yaml
tasks/hermes/error-recovery/: error-api.yaml  error-command-not-found.yaml  error-deadlock.yaml  error-infinite-loop.yaml  error-memory-leak.yaml  error-permission-denied.yaml  error-race-condition.yaml  (+3 more)
tests/: __init__.py  test_api_client.py  test_config.py  test_scorer.py  test_task_loader.py
(+40 files in other folders)
